# untitled10

./: CMakeLists.txt  example.cpp  palindrome.cpp
